--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>K</span>
+        <span>S</span>
         <span>A</span>
-        <span>M</span>
-        <span>U</span>
+        <span>P</span>
+        <span>H</span>
+        <span>I</span>
+        <span>R</span>
+        <span>A</span>
     </div>
   
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!</span>
+        <span>HAPPY BIRTHDAY YA CANTIK</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">coba klik</a>
         </button>
         
     </div>
