--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">coba klik</a>
+            <a href="flower.html">klik disini</a>
         </button>
         
     </div>
