--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <button>
             <a href="flower.html">klik disini</a>
         </button>
-        
+     <div class="description">
+         <span>maaf yaa, aku kasi di sini dulu<3</span>   
     </div>
+        
 </body>
 </html>
