--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
   
     <div class="description">
         <span>HAPPY BIRTHDAY YA CANTIK</span>
+        <span>Haii
+Aku ingin mengucapkan selamat untukmu
+Selamat karna udah bertahan sejauh ini
+Aku harap kamu bahagia terus yaa
+Hadirmu didunia ini
+adalah kebahagiaan,
+adalah cinta
+adalah hadiah yang tak ternilai
+Kehadiranmu membawa kebahagiaan untuk
+orang-orang disekitarmu
+Terima kasih karena udah lahir didunia ini
+Semoga doa-doa dan impianmu terwujud
+Dari aku yang jauh</span>
     </div>
     <div class="button">
         <button>
@@ -31,7 +44,7 @@
     
 <body>
     <div class="description">
-         <span>maaf yaa, aku kasi di sini dulu<3</span>
+         <span>maaf yaa, aku kasi di sini dulu hehee<3</span>
     </div>
     
 </body>
