--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     </div>
   
     <div class="description">
-        <span>HAPPY BIRTHDAY YA CANTIK</span>
-        <span>Haii
-Aku ingin mengucapkan selamat untukmu
+        <span>HAPPY BIRTHDAY YA CANTIK,Aku ingin mengucapkan selamat untukmu
 Selamat karna udah bertahan sejauh ini
 Aku harap kamu bahagia terus yaa
 Hadirmu didunia ini
@@ -34,7 +32,8 @@ Kehadiranmu membawa kebahagiaan untuk
 orang-orang disekitarmu
 Terima kasih karena udah lahir didunia ini
 Semoga doa-doa dan impianmu terwujud
-Dari aku yang jauh</span>
+Dari aku yang jauh,</span>
+        
     </div>
     <div class="button">
         <button>
