--- a/index.html
+++ b/index.html
@@ -21,18 +21,7 @@
     </div>
   
     <div class="description">
-        <span>HAPPY BIRTHDAY YA CANTIK,Aku ingin mengucapkan selamat untukmu
-Selamat karna udah bertahan sejauh ini
-Aku harap kamu bahagia terus yaa
-Hadirmu didunia ini
-adalah kebahagiaan,
-adalah cinta
-adalah hadiah yang tak ternilai
-Kehadiranmu membawa kebahagiaan untuk
-orang-orang disekitarmu
-Terima kasih karena udah lahir didunia ini
-Semoga doa-doa dan impianmu terwujud
-Dari aku yang jauh,</span>
+        <span>HAPPY BIRTHDAY YA CANTIK❤️</span>
         
     </div>
     <div class="button">
