--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
   
     <div class="description">
-        <span>HAPPY BIRTHDAY YA CANTIK</span>
+        <span>HAPPY BIRTHDAY YA POPAYE CANTIK</span>
         
     </div>
     <div class="button">
